<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



        <TextView
            android:id="@+id/sigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_in"
            android:textColor="@color/cardview_dark_background"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:autofillHints="no"
            android:background="@drawable/mail_pwd"
            android:ems="10"
            android:hint="@string/eid"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.1"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/sigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sigin"
            app:layout_constraintVertical_bias="0.8" />
    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigin"
        app:layout_constraintVertical_bias="0.75"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:background="@drawable/mail_pwd"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.1" />
    </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/background"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/sigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sigin"
            app:layout_constraintVertical_bias="16.58000004" />

        <TextView
            android:id="@+id/needhelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_help"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/sigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sigin"
            app:layout_constraintVertical_bias="8.59" />

        <TextView
            android:id="@+id/haveac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_ac"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/sigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="5.15" />

        <TextView
            android:id="@+id/sigup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#00d2ff"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/sigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="@+id/haveac"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="5.15" />
</androidx.constraintlayout.widget.ConstraintLayout>